# splotch

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  Makefile_pv  README  Splotch5  demo.par  demo.tga  explore_simulation.par  fullsplotch.cc  sample.par  splotch.cc  splotch.cl  splotch.par  splotch4.5PLX  splotch_mil2.par
booster/: m_rotation.cc  mesh_creator.cc  mesh_vis.h  p_selector.cc  randomizer.cc
c_utils/: sse_utils.h
config/: config.h  makefile.inc  makefile.inc.in  typeselect.h
cuda/: CuPolicy.cpp  CuPolicy.cu  CuPolicy.h  CuRender.cu  CuRender.h  Cuda-1.rules  VTimer.cpp  VTimer.h  cuda_kernel.cu  cuda_kernel.cuh  cuda_policy.cu  cuda_policy.h  cuda_render.cu  cuda_render.h  cuda_splotch.cc  cuda_splotch.h  cuda_utils.cu  cuda_utils.h  deviceQuery.cu  sample.par  splotch.cu  splotch_cu_data.h  splotch_cuda.h  splotch_cuda2.cc  splotch_cuda2.h  splotch_kernel.cu  splotchutils_cuda.cc  splotchutils_cuda.h  system_error
cxxsupport/: announce.cc  announce.h  arr.h  constants.h  cxxutils.cc  cxxutils.h  datatypes.h  error_handling.cc  error_handling.h  ls_image.cc  ls_image.h  lsconstants.h  math_utils.h  message_error.h  mpi_support.cc  mpi_support.h  paramfile.h  psort.h  share_utils.h  sort_utils.h  sse_utils.h  sse_utils_cxx.h  string_utils.cc  string_utils.h  vec3.h  walltimer.cc  walltimer.h
docs/: AMSfonts.sty  CUDASplotch.doc  Splotch-CUDA.tex  Splotch2012.bbl  Splotch2012.tex  ToDoList  amssymb.sty  box.eps  master.bib  myelse.cls  over.eps  over1.eps  paramdoc  pifont.sty  pixels.eps  radii.eps  rotating.sty  scalan.eps  scalaomp.eps  speedup.eps  splotch-parallel.tex  splotch_formulas.tex  splotch_include.tex
docs/Splotch-EGPGV14/: EGauthorGuidelines-pgv13-fin.tex  EGauthorGuidelines-pgv13-sub.tex  Splotch-EGPGV.aux  Splotch-EGPGV.bbl  Splotch-EGPGV.bib  Splotch-EGPGV.blg  Splotch-EGPGV.brf  Splotch-EGPGV.tex
docs/SplotchCUDA_paper/: Splotch-CUDA.aux  Splotch-CUDA.bbl  Splotch-CUDA.blg  Splotch-CUDA.tex  master.bib  over1.eps  overheadsK20-fig9.eps  overheadsK20.eps  pixelsK20-fig4.eps  scala-fig3K20.eps  scalan.eps  scalaompK20-fig7.eps  scalaompK20.eps  sketch.eps  speedupK20-fig8.eps  speedupK20.eps
docs/images-papergpu/: fov.eps  particles.eps  pixels.eps  radii.eps  scalan.eps
docs/mic/: ExecutionModel.eps  MPIFrameTimes.eps  Rotocol.eps  TotalTime.eps  backup_splotch_mic.tex  easychair.aux  easychair.out  easychair.toc  exmodel.eps  mpi_omp_mic.eps  splotch-mic.aux  splotch-mic.dvi  splotch-mic.out  splotch-mic.tex  splotch-mic.toc  splotch_mic.aux  splotch_mic.tex
galaxy/: CalculateColours.cxx  Galaxy.cxx  Galaxy.h  GaussRFunc.cxx  README  ReadImages.cxx  TirificWarp.cxx  demo.par
html/: index.html
images/: test_a_eq_e_zsort_openMP.tga  test_all.tga  test_dm.tga  test_e_eq_a_nosort.tga  test_gas.tga  test_stars.tga  test_zsort_gray_MPI.tga  test_zsort_gray_openMP.tga
kernel/: axisbox.cxx  axisbox.h  bstream.h  byteswap.h  camera.h  colour.h  colourmap.h  constants.h  countable_new.cxx  countable_new.h  error.cxx  error.h  full_shading_info.h  geom_ray.h  globals.cxx  globals.h  handle.h  initable.h  inside_info.h  intersect_info.h  interval.h  kernel.h  light.h  light_array.h  msg_stream.h  object.h  object_queue.h  output.h  ray.h  renderer.h  shading_info.h  shape.h  surface.h  transform.cxx  transform.h  transformable.h  vector.h  volume.h  world.h
labeltool/: splotchColormap.py  splotchLabelFrames.sh
makefiles/: Makefile.BCX
mpiio-0.01/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  gen_param.c  mpi_array  mpi_array.c  partition.c  partition.h
mpiio-0.01/.deps/: gen_param.Po  mpi_array-mpi_array.Po  partition.Po
mpiio-0.01/autom4te.cache/: output.0  requests  traces.0
mpiio-0.01/m4/: Makefile.mk  ac_mpi.m4  enable.m4
mpiio-0.01/share/doc/mpiio/: asci.param
mpiio-1.0/: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
opencl/: CuPolicy.cpp  create_kernel  deviceQuery.cpp  splotch.cl  splotch.cpp  splotch_cuda.h  splotch_cuda2.cc  splotch_cuda2.h  splotch_kernel.h
palettes/: NewSplotch.pal  OldSplotch.pal
papers/: splotch-template.tex
paraview/: CMakeLists.txt  GitExternal.cmake  pqSplotchColorScaleEditor.cxx  pqSplotchColorScaleEditor.h  pqSplotchDisplayPanelDecorator.cxx  pqSplotchDisplayPanelDecorator.h  pqSplotchDisplayPanelDecorator.ui  pqSplotchPropertyWidgetDecorator.cxx  pqSplotchPropertyWidgetDecorator.h  pqSplotchRaytraceDisplayPanelDecorator.cxx  pqSplotchRaytraceDisplayPanelDecorator.h  pqSplotchRaytraceDisplayPanelDecorator.ui  splotch2H5Part.cpp  vtkSplotchDefaultPainter.cxx  vtkSplotchDefaultPainter.h  vtkSplotchMapper.cxx  vtkSplotchPainter.cxx  vtkSplotchPainter.h  vtkSplotchRaytraceMapper.cxx  vtkSplotchRaytraceMapper.h  vtkSplotchRaytraceRepresentation.cxx  vtkSplotchRaytraceRepresentation.h  vtkSplotchRaytraceRepresentation.xml  vtkSplotchRepresentation.cxx  vtkSplotchRepresentation.h  vtkSplotchRepresentation.xml  vtkSplotchRepresentation.xml.bak
paraview/Testing/: CMakeLists.txt  TestParticlePartition.cxx  TestSplotchMapper.cxx
paraview/Testing/data/: splotch.par
paraview/colourmaps/: SplotchDefault.xml
paraview/piston/: vtkCUDASplotchPainter.cxx  vtkCUDASplotchPainter.h  vtkDataSetToSplotch.cxx  vtkDataSetToSplotch.h
previewer/: Previewer.cpp  Previewer.h
reader/: F90_UnformattedIO.h  bin_readeer.cc  bin_reader.cc  bin_reader.h  bin_reader_mpi.cc  enzo_reader.cc  gadget_hdf5_reader.cc  gadget_reader.cc  galaxy_reader.cc  h5part_reader.cc  hdf5_reader.cc  mesh_reader.cc  millenium_reader.cc  ramses_helper_lib.h  ramses_reader.cc  reader.h  tipsy_reader.cc  visivo_reader.cc
splotch/: ORIGsplotch.cc  scenemaker.cc  scenemaker.h  splotch.cc  splotch_host.cc  splotch_host.h  splotchutils.cc  splotchutils.h
splotch_booster/: splotch_host.cc
utils/: colourmap.cxx  colourmap.h  converter.h  math.h  noise.cxx  noise.h  rng.cxx  rpn_fexpr.cxx  rpn_fexpr.h  twister.h  utils.h  vector_math.h
writer/: write_bmp.cc  write_ppm.cc  write_tga.cc  writer.h
(+40 files in other folders)
